--- a/lecture10-CN.ipynb
+++ b/lecture10-CN.ipynb
@@ -6,15 +6,15 @@
    "source": [
     "# 内生性\n",
     "\n",
-    "在微观经济分析中， 外生变量指的是那些在我们的经济体系之外决定的因素，\n",
+    "在微观经济分析中，外生变量指的是那些在我们的经济体系之外决定的因素，\n",
     "而内生变量则是在经济体系之内被决定的因素。\n",
     "\n",
     "```{prf:example}\n",
     "以下是我们碰到过多次的微观经济学习题。如果一个人的效用函数是\n",
     "$u\\left(q_{1},q_{2}\\right)$，其中\n",
-    "$q_{1}$ 和 $q_{2}$ 是两件商品的数量。他的预算是\n",
+    "$q_{1}$ 和 $q_{2}$ 是两种商品的数量。他的预算约束是\n",
     "$p_{1}q_{1}+p_{2}q_{2}\\leq C$，其中 $p_{1}$ 和 $p_{2}$\n",
-    "分别是两件商品的价格。那么他会购买的最优数量\n",
+    "分别是两种商品的价格。那么他会购买的最优数量\n",
     "$q_{1}^{*}$ 和 $q_{2}^{*}$ 是多少？在这个问题中，效用函数\n",
     "$u\\left(\\cdot,\\cdot\\right)$，物品价格 $p_{1}$ 和\n",
     "$p_{2}$，和预算 $C$ 是外生变量。 而最优数量\n",
@@ -27,8 +27,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "这两个微观经济学中的术语，“内生性”和“外生性”，将被借用到多方程计量经济模型中。\n",
-    "在单方程回归模型中，\n",
+    "微观经济学中的概念**内生性**和**外生性**被借用到多方程计量模型。在单方程回归模型中，\n",
     "\n",
     "$$\n",
     "y_{i}=x_{i}'\\beta+e_{i}\n",
@@ -38,7 +37,7 @@
     "那么我们就称 $x_{ik}$ 是**内生的** ，或者说是一个**内生性变量**；\n",
     "反之 $x_{ik}$ 就是一个**外生性变量**。\n",
     "\n",
-    "使用线性回归方法的实证工作常常饱受内生性问题的挑战。这些问题常见于经济研讨会和审稿报告。\n",
+    "线性回归的实证分析常常遇到内生性问题的挑战。这些问题常见于经济研讨会和审稿报告。\n",
     "为了定量经济研究中的实证分析策略能够站得住脚，了解潜在内生性的来源和全面地讨论如何解决内生性非常重要。\n"
    ]
   },
@@ -51,20 +50,21 @@
     "\n",
     "\n",
     "内生性通常意味着仅用 $\\left(y_{i},x_{i}\\right)$ 难以识别我们感兴趣的参数。内生性的鉴别对于理解实证经济研究是至关重要的。如果模型中的参数与被观测变量的分布之间的映射是一一对应的，那我们就认为这个参数是被**识别**的。反之我们就称该模型的参数**识别不足**。 这是一个抽象的定义，\n",
-    "让我们接下来在线性回归的背景下来讨论它。\n",
+    "我们可以在线性回归的背景下来讨论它。\n",
     "\n",
+    "```{prf:example}\n",
     "线性投影模型隐含了矩方程：\n",
     "\n",
     "$$\n",
     "\\mathbb{E}\\left[x_{i}x_{i}'\\right]\\beta=\\mathbb{E}\\left[x_{i}y_{i}\\right].\n",
     "$$\n",
     "\n",
-    "如果 $E\\left[x_{i}x_{i}'\\right]$ 是满秩的，那么\n",
+    "如果 $E\\left[x_{i}x_{i}'\\right]$ 满秩，那么\n",
     "$\\beta=\\left(\\mathbb{E}\\left[x_{i}x_{i}'\\right]\\right)^{-1}\\mathbb{E}\\left[x_{i}y_{i}\\right]$\n",
-    "是总体矩量的一个函数，并且它是可识别的。与之形成对比的是，如果一些 $x_{k}$ 是完全共线，\n",
+    "是总体矩的一个函数，并且它是可识别的。与之相对，如果一些 $x_{k}$ 是完全共线，\n",
     "意味着 $\\mathbb{E}\\left[x_{i}x_{i}'\\right]$ 不满秩，即有多个\n",
     "$\\beta$ 可以满足该 $k$ 方程系统。\n",
-    "\n"
+    "```\n"
    ]
   },
   {
@@ -121,7 +121,7 @@
    "source": [
     "\n",
     "为了解决内生性，我们寻求可以保证模型能识别的额外变量或数据结构。最常用的方法是：\n",
-    "(i) 固定效益模型 (ii) 工具变量：\n",
+    "(i) 固定效应模型 (ii) 工具变量：\n",
     "\n",
     "-   固定效应模型需要为每个个体 $i$ 收集多个观察值，通常是跨时间的。此外，\n",
     "    内生性的来源是不变于时间的，并以如下形式另外进入模型： \n",
@@ -141,7 +141,7 @@
     "\n",
     "面板数据法或工具变量法都需要除 $\\left(y_{i},x_{i}\\right)$ 以外的额外信息。\n",
     "没有这些额外的数据，就没有办法解决识别不足的问题。正如线性投影模型可以用于存在合适矩的\n",
-    "$\\left(y_{i},x_{i}\\right)$ 的任何联合分布一样，从纯统计学角度来看一个线性IV（工具变量）模型仅机械地取决于 $\\left(y_{i},x_{i},z_{i}\\right)$ 的选择，而无需参考任何经济学知识。\n"
+    "$\\left(y_{i},x_{i}\\right)$ 的任何联合分布一样，从纯统计学角度来看一个线性工具变量(Instrument Variable)模型仅机械地取决于 $\\left(y_{i},x_{i},z_{i}\\right)$ 的选择，而无需参考任何经济学知识。\n"
    ]
   },
   {
@@ -152,50 +152,47 @@
     "## 工具变量\n",
     "\n",
     "\n",
-    "有效的 IV 有两个要求：正交性和相关性。正交性需要正确指定模型。如果违反了相关性，即 IV 与内生变量不相关，则多个参数可以生成可观察数据。\n",
-    "识别，按照计量经济学中的标准定义，在这种情况下被打破了。\n",
+    "可靠的工具变量有两个条件：正交性和相关性。正交性需要正确设定模型。如果违反了相关性，即工具变量与内生变量不相关，则可观察数据可以由多个参数生成。那么按照计量经济学的定义，模型识别失败。\n",
     "\n",
-    "结构方程是一种我们关心的经济模型。让我们来看看以下这个线性结构模型：\n",
+    "结构方程是经济学中的重要模型。考虑如下的线性结构模型：\n",
     "\n",
     "$$\n",
     "y_{i}=x_{1i}'\\beta_{1}+z_{1i}'\\beta_{2}+\\epsilon_{i},\n",
     "$$(eqn:label102)\n",
     "\n",
-    "\n",
-    "其中 $x_{1i}$ 是一个 $k_{1}$维的内生解释变量，$z_{1i}$ 是一个 $k_{2}$维\n",
-    "包含了截距的外生解释变量。另外，还有 $z_{2i}$，一个 $k_{3}$维不被包含的外生变量。\n",
-    "令 $K=k_{1}+k_{2}$，$L=k_{2}+k_{3}$。将 $x_{i}=\\left(x_{1i}',z_{1i}'\\right)'$ \n",
-    "表示为一个 $K$维的解释变量，$z_{i}=\\left(z_{1i}',z_{2i}'\\right)$ 为一个 $L$维的\n",
+    "其中 $x_{1i}$ 是 $k_{1}$维的内生解释变量，$z_{1i}$ 是 $k_{2}$维\n",
+    "包含了截距的外生解释变量。另外，还有 $z_{2i}$，不在模型内的 $k_{3}$维外生变量。\n",
+    "令 $K=k_{1}+k_{2}$，$L=k_{2}+k_{3}$。记 $x_{i}=\\left(x_{1i}',z_{1i}'\\right)'$ \n",
+    "为 $K$维解释变量，$z_{i}=\\left(z_{1i}',z_{2i}'\\right)$ 为 $L$维\n",
     "外生向量。\n",
     "\n",
-    "我们称这个外生变量为 **工具变量** (instrumental variable, or IV for short)。令 $\\beta=\\left(\\beta_{1}',\\beta_{2}'\\right)'$ \n",
-    "为一个我们感兴趣的 $K$维的参数。从现在开始，我们将\n",
-    "{eq}`eqn:label102`重写为\n",
+    "我们称这个外生变量为 **工具变量** (Instrumental Variable, IV)。令 $\\beta=\\left(\\beta_{1}',\\beta_{2}'\\right)'$ \n",
+    "为我们感兴趣的 $K$维的参数。我们可以将{eq}`eqn:label102`重写为\n",
     "\n",
     "$$\n",
     "y_{i}=x_{i}'\\beta+\\epsilon_{i}\n",
     "$$(eqn:basic)\n",
     "\n",
-    "我们就有了一个工具向量 $z_{i}$。\n",
+    "我们就得到了一个工具向量 $z_{i}$。\n",
     "\n",
-    "在估计任何结构计量经济模型之前，我们必须检查是否能识别。在\n",
-    "{eq}`eqn:basic`的背景下， 识别需要真值 $\\beta_{0}$ 是参数空间上满足矩条件\n",
+    "在估计前，我们必须检查结构计量经济模型是否能识别。依据\n",
+    "{eq}`eqn:basic`，识别需要真值 $\\beta_{0}$ 是参数空间上满足矩条件\n",
     "\n",
     "$$\n",
     "\\mathbb{E}\\left[z_{i}\\left(y_{i}-x_{i}'\\beta\\right)\\right]=0_{L}.\n",
     "$$(eqn:moment)\n",
     "\n",
     "的唯一值。秩条件是识别的充分必要条件。\n",
-    "```{prf:assumption} 矩条件\n",
+    "```{prf:assumption} 秩条件\n",
     "$\\mathrm{rank}\\left(\\mathbb{E}\\left[z_{i}x_{i}'\\right]\\right)=K$.\n",
     "\n",
     "注意 $\\mathbb{E}\\left[x_{i}'z_{i}\\right]$ 是一个 $K\\times L$ 的矩阵。\n",
-    "秩条件意味着 **顺序条件** $L\\geq K$， 即不被包含的工具的数量必须不少于内生变量的数量。\n",
+    "秩条件意味着阶数 $L\\geq K$， 即工具变量的数量必须不少于内生变量。\n",
     "```\n",
-    "```{prf:assumption}\n",
-    "{eq}`eqn:moment`中的参数当且仅当秩条件成立时才被识别。\n",
+    "```{prf:theorem}\n",
+    "当且仅当秩条件成立，{eq}`eqn:moment`中的参数才可以识别。\n",
     "```{prf:proof}\n",
-    "（“正”方向的证明。） 对于任何使得 $\\tilde{\\beta}\\neq\\beta_{0}$ 的 $\\tilde{\\beta}$，\n",
+    "(充分性) 对于任何 $\\tilde{\\beta}\\neq\\beta_{0}$ 的 $\\tilde{\\beta}$，\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -204,14 +201,12 @@
     "$$\n",
     "\n",
     "由于\n",
-    "$\\mathrm{rank}\\left(\\mathbb{E}\\left[z_{i}x_{i}'\\right]\\right)=K$，我们会得到\n",
-    "$\\mathbb{E}\\left[z_{i}x_{i}'\\right]\\left(\\beta_{0}-\\tilde{\\beta}\\right)=0_{L}$\n",
-    "当且仅当 $\\beta_{0}-\\tilde{\\beta}=0_{K}$，而这违反了\n",
-    "$\\tilde{\\beta}\\neq\\beta_{0}$。因此 $\\beta_{0}$ 是唯一满足\n",
-    "{eq}`eqn:moment`的值。\n",
+    "$\\mathrm{rank}\\left(\\mathbb{E}\\left[z_{i}x_{i}'\\right]\\right)=K$，我们可以得出\n",
+    "当且仅当 $\\beta_{0}-\\tilde{\\beta}=0_{K}$时， $\\mathbb{E}\\left[z_{i}x_{i}'\\right]\\left(\\beta_{0}-\\tilde{\\beta}\\right)=0_{L}$\n",
+    "，而这违反了假设 $\\tilde{\\beta}\\neq\\beta_{0}$。因此 $\\beta_{0}$ 是满足{eq}`eqn:moment`的唯一值。\n",
     "\n",
-    "（“反”方向的证明留作练习。 提示：通过对立性，如果秩条件不成立，则模型无法被识别。\n",
-    "我们可以通过举例子轻松地证明这个定理。）\n",
+    "(必要性证明留作练习。提示：通过逆否命题(Contrapositivity)——如果秩条件不成立，则模型无法被识别。\n",
+    "我们就可以通过举例轻松地证明这个定理。)\n",
     "```"
    ]
   },
@@ -223,42 +218,38 @@
     "## 内生性的来源\n",
     "\n",
     "\n",
-    "由于计量经济学家主要使用非实验数据，我们内生性问题非常重要性。下面我们来看几个例子。\n",
-    "```{prf:example}\n",
-    "我们知道一阶差分 (FD) 估计值对于（静态）面板数据模型来说是一致的。但FD估计值\n",
-    "在动态面板模型中将会遇到困难：\n",
+    "由于计量经济学家主要面对非实验数据，内生性问题就非常重要。下面我们来看几个例子。\n",
+    "```{prf:example} 动态面板模型\n",
+    "我们知道一阶差分(first-difference, FD)估计量对于(静态)面板数据模型来说是相合的。但在动态面板模型\n",
     "\n",
     "$$\n",
     "y_{it}=\\beta_{1}+\\beta_{2}y_{i,t-1}+\\beta_{3}x_{it}+\\alpha_{i}+\\epsilon_{it},\\label{eq:dymPanel}\n",
     "$$(eqn:panel)\n",
     "\n",
+    "中，一阶差分估计量会存在一些问题：\n",
     "即使我们假设\n",
     "\n",
     "$$\n",
     "\\mathbb{E}\\left[\\epsilon_{is}|\\alpha_{i},x_{i1},\\ldots,x_{iT},y_{i,t-1},y_{i,t-2},\\ldots,y_{i0}\\right]=0,\\ \\ \\forall s\\geq t\n",
     "$$(eqn:labeldyn)\n",
     "\n",
-    "当对周期 $t$ 和 $t-1$ 取上述方程{eq}`eqn:panel`的差时，我们得到:\n",
+    "对{eq}`eqn:panel`中的 $t$ 期和 $t-1$ 期进行差分，我们有:\n",
     "\n",
     "$$\n",
     "\\left(y_{it}-y_{i,t-1}\\right)=\\beta_{2}\\left(y_{it-1}-y_{i,t-2}\\right)+\\beta_{3}\\left(x_{it}-x_{i,t-1}\\right)+\\left(\\epsilon_{it}-\\epsilon_{i,t-1}\\right).\n",
     "$$(eqn:dynmean)\n",
     "\n",
-    "根据{eq}`eqn:labeldyn`，\n",
-    "$\\mathbb{E}\\left[\\left(x_{it}-x_{i,t-1}\\right)\\left(\\epsilon_{it}-\\epsilon_{i,t-1}\\right)\\right]=0$，\n",
-    "但是\n",
+    "根据{eq}`eqn:labeldyn`，$\\mathbb{E}\\left[\\left(x_{it}-x_{i,t-1}\\right)\\left(\\epsilon_{it}-\\epsilon_{i,t-1}\\right)\\right]=0$，但\n",
     "\n",
     "$$\n",
     "\\mathbb{E}\\left[\\left(y_{i,t-1}-y_{i,t-2}\\right)\\left(\\epsilon_{it}-\\epsilon_{i,t-1}\\right)\\right]=-\\mathbb{E}\\left[y_{i,t-1}\\epsilon_{i,t-1}\\right]=-\\mathbb{E}\\left[\\epsilon_{i,t-1}^{2}\\right]\\neq0.\n",
     "$$\n",
     "\n",
-    "因此系数 $\\beta_{2}$ 和 $\\beta_{3}$ 不能从线性回归模型\n",
-    "{eq}`eqn:dynmean`中被识别。\n",
+    "因此在线性回归模型{eq}`eqn:dynmean`中，系数 $\\beta_{2}$ 和 $\\beta_{3}$ 不能被识别。\n",
     "```\n",
     "\n",
     "```{prf:remark}\n",
-    "在上述例子中工具变量很容易找到。请注意里面的线性关系\n",
-    "{eq}`eqn:labeldyn` 意味着 \n",
+    "上述例子的工具变量很容易找到。注意到依据假设{eq}`eqn:labeldyn`，可以通过{eq}`eqn:panel`得到\n",
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
@@ -268,17 +259,14 @@
     "\\end{aligned}\n",
     "$$\n",
     "\n",
-    "根据假设\n",
-    "{eq}`eqn:labeldyn`， 上述关系以\n",
+    "便能以\n",
     "\n",
     "$$\n",
     "\\mathbb{E}\\left[\\left(\\epsilon_{i,t}-\\epsilon_{i,t-1}\\right)f\\left(\\epsilon_{i,t-2},\\epsilon_{i,t-3},\\ldots,\\epsilon_{i1}\\right)\\right]=0.\n",
     "$$\n",
     "\n",
-    "的形式给出正交条件。\n",
-    "换句话说，任何关于 $y_{i,t-2},y_{i,t-3},\\ldots,y_{i1}$ 的函数都垂直于误差项\n",
-    "$\\left(\\epsilon{}_{i,t-1}-\\epsilon_{i,t-2}\\right)$。\n",
-    "这里被排除在外的IV（工具变量）是由模型本身自然生成的。\n",
+    "的形式给出正交条件。换言之， $y_{i,t-2},y_{i,t-3},\\ldots,y_{i1}$ 的任何函数都正交于误差项\n",
+    "$\\left(\\epsilon{}_{i,t-1}-\\epsilon_{i,t-2}\\right)$。 这里模型外的工具变量是由模型本身自然生成的。\n",
     "```"
    ]
   },
@@ -287,45 +275,49 @@
    "metadata": {},
    "source": [
     "\n",
-    "另一个经典的内生性来源是测量误差。\n",
-    "```{prf:example}\n",
-    "当解释变量不是直接可观察的，而是被有误差的测量代替时，内生性的问题也会出现。假设真正的线性模型是:\n",
+    "内生性另一个经典原因是测量误差。\n",
+    "\n",
+    "```{prf:example} 经典测量误差\n",
+    "当解释变量不可直接观察，而用有误差的测量值代替时，也会出现内生性问题。假设真实的线性模型是:\n",
     "\n",
     "$$\n",
     "y_{i}=\\beta_{1}+\\beta_{2}x_{i}^{*}+u_{i}\n",
     "$$(eqn:merror)\n",
     "\n",
-    "其中 $\\mathbb{E}\\left[u_{i}|x_{i}^{*}\\right]=0$ 。 我们观察不到\n",
-    "$x_{i}^{*}$ ，但我们能观察到 $x_{i}$，它是 $x_{i}^{*}$ 的测量值，\n",
-    "并且它们的关系是 $$x_{i}=x_{i}^{*}+v_{i}$$，其中\n",
-    "$\\mathbb{E}\\left[v_{i}|x_{i}^{*},u_{i}\\right]=0$。这种测量误差的公式被称为**经典测量误差** 。\n",
-    "替换{eq}`eqn:merror`，\n",
+    "其中 $\\mathbb{E}\\left[u_{i}|x_{i}^{*}\\right]=0$ 。我们无法观察\n",
+    "$x_{i}^{*}$ ，但我们能观察到 $x_{i}^{*}$ 的测量值 $x_{i}$，\n",
+    "它们之间的关系是 \n",
+    "\n",
+    "$$\n",
+    "x_{i}=x_{i}^{*}+v_{i}\n",
+    "$$\n",
+    "\n",
+    "其中 $\\mathbb{E}\\left[v_{i}|x_{i}^{*},u_{i}\\right]=0$。这种公式被称为**经典测量误差** 。\n",
+    "替换{eq}`eqn:merror`中的不可观察的 $x_{i}^{*}$ 得到\n",
     "\n",
     "$$\n",
     "y_{i}=\\beta_{1}+\\beta_{2}\\left(x_{i}-v_{i}\\right)+u_{i}=\\beta_{1}+\\beta_{2}x_{i}+e_{i}\\label{eq:measurement_error2}\n",
     "$$\n",
     "\n",
-    "中的不可观察的 $x_{i}^{*}$，其中 $e_{i}=u_{i}-\\beta_{2}v_{i}$。\\\n",
-    "相关性:\n",
+    "其中 $e_{i}=u_{i}-\\beta_{2}v_{i}$。相关性:\n",
     "\n",
     "$$\n",
     "\\mathbb{E}\\left[x_{i}e_{i}\\right]=\\mathbb{E}\\left[\\left(x_{i}^{*}+v_{i}\\right)\\left(u_{i}-\\beta_{2}v_{i}\\right)\\right]=-\\beta_{2}\\mathbb{E}\\left[v_{i}^{2}\\right]\\neq0.\n",
     "$$(eqn:merror2)\n",
     "\n",
-    "OLS{eq}`eqn:merror2` 不能提供一个一致的估计量。\n",
+    "OLS{eq}`eqn:merror2`不能得到相合估计量。\n",
     "```\n",
     "```{prf:remark}\n",
-    "或者，我们可以从线性投影系数的表达式来看上述经典测量误差问题。我们知道在\n",
+    "我们也可以用线性投影系数的表达式来理解经典测量误差问题。我们知道在\n",
     "{eq}`eqn:merror`中 $\\beta_{2}^{\\mathrm{infeasible}}=\\mathrm{cov}\\left[x_{i}^{*},y_{i}\\right]/\\mathrm{var}\\left[x_{i}^{*}\\right].$\n",
-    "相反，当我们对可观察的 $x_{i}$ 回归 $y_{i}$ 时，对应的线性投影系数为:\n",
+    "与之相对，当我们用可观察的 $x_{i}$ 回归 $y_{i}$ 时，得到的线性投影系数为:\n",
     "\n",
     "$$\n",
     "\\beta_{2}^{\\mathrm{feasible}}=\\frac{\\mathrm{cov}\\left[x_{i},y_{i}\\right]}{\\mathrm{var}\\left[x_{i}\\right]}=\\frac{\\mathrm{cov}\\left[x_{i}^{*}+v_{i},y_{i}\\right]}{\\mathrm{var}\\left[x_{i}^{*}+v_{i}\\right]}=\\frac{\\mathrm{cov}\\left[x_{i}^{*},y_{i}\\right]}{\\mathrm{var}\\left[x_{i}^{*}\\right]+\\mathrm{var}\\left[v_{i}\\right]}.\n",
     "$$\n",
     "\n",
-    "很明显， $|\\beta_{2}^{\\mathrm{feasible}}|\\leq|\\beta_{2}^{\\mathrm{infeasible}}|$\n",
-    "对应的线性投影系数为 $\\mathrm{var}\\left[v_{i}\\right]=0$ （无测量误差）\n",
-    "时成立。这称为由于测量误差引起的 **衰减偏差** 。\n",
+    "显然 $|\\beta_{2}^{\\mathrm{feasible}}|\\leq|\\beta_{2}^{\\mathrm{infeasible}}|$，\n",
+    "而且仅当 $\\mathrm{var}\\left[v_{i}\\right]=0$ (无测量误差)时取等号。这是由于测量误差引起的 **衰减偏差**(attenuation bias)。\n",
     "```"
    ]
   },
@@ -334,25 +326,26 @@
    "metadata": {},
    "source": [
     "\n",
-    "接下来，我们给出两个方程组的例子，一个来自微观经济学，另一个来自宏观经济学。\n",
+    "接下来，我们介绍两个方程组的例子，一个来自微观经济学，另一个来自宏观经济学。\n",
+    "\n",
     "```{prf:example} 供给与需求\n",
-    "设 $p_{i}$ 和 $q_{i}$ 为第 $i$ 个市场上一个商品的对数价格和对数数量，并且它们在市场上是独立同分布的。\n",
-    "我们对下面的这个需求曲线感兴趣\n",
+    "设 $p_{i}$ 和 $q_{i}$ 为第 $i$ 个市场上某个商品的对数价格和对数数量，并且它们在市场上是独立同分布的。\n",
+    "我们感兴趣的需求曲线为\n",
     "\n",
     "$$\n",
     "p_{i}=\\alpha_{d}-\\beta_{d}q_{i}+e_{di}\n",
     "$$(eq:demand)\n",
     "\n",
-    "其中 $\\beta_{d}\\geq0$ ； 以及以下这个供给曲线\n",
+    "其中 $\\beta_{d}\\geq0$ ；供给曲线为\n",
     "\n",
     "$$\n",
     "p_{i}=\\alpha_{s}+\\beta_{s}q_{i}+e_{si\n",
     "$$(eq:supply)\n",
     "\n",
-    "其中 $\\beta_{s}\\geq0$。 我们使用一个简单的线性规范，以便系数 $\\beta_{d}$\n",
+    "其中 $\\beta_{s}\\geq0$。 我们使用一个简单的线性形式(linear specification)，使得系数 $\\beta_{d}$\n",
     "可以被解释为需求弹性，而 $\\beta_{s}$ 可以被解释为供给弹性。 \n",
-    "本科微观经济学课程教授确定性形式，但我们添加了一个误差项来处理数据。\n",
-    "我们可以通过对 $q_{i}$ 回归 $p_{i}$ 来得到弹性吗？\n",
+    "本科微观经济学课程教授的是确定性形式，但在此我们添加了误差项来处理数据。\n",
+    "我们可以通过用 $q_{i}$ 对 $p_{i}$ 回归来得到弹性吗？\n",
     "\n",
     "这两个方程可以被写成矩阵形式：\n",
     "\n",
@@ -368,11 +361,9 @@
     "\\end{pmatrix}\n",
     "$$(eq:structural)\n",
     "\n",
-    "微观经济学术语称\n",
-    "$\\left(p_{i},q_{i}\\right)$ 为内生变量，称\n",
-    "$\\left(e_{di},e_{si}\\right)$ 为外生变量。\n",
+    "微观经济学中称 $\\left(p_{i},q_{i}\\right)$ 为内生变量，称 $\\left(e_{di},e_{si}\\right)$ 为外生变量。\n",
     "{eq}`eq:structural` 是一个**结构方程**，因为它是由经济理论驱动的，\n",
-    "因此系数具有经济意义。如果我们排除明显的情况 $\\beta_{d}=\\beta_{s}=0$，\n",
+    "系数具有经济学含义。如果我们排除 $\\beta_{d}=\\beta_{s}=0$，\n",
     "我们可以解出 \n",
     "\n",
     "$$\n",
@@ -395,16 +386,16 @@
     "\\end{pmatrix}\\right].\\label{eq:reduced}\\end{aligned}\n",
     "$$(eq:reduced)\n",
     "\n",
-    "这个方程{eq}`eq:reduced` 被称为 **简化形式** ——内生变量被表示为关于参数和外生变量的显式函数。\n",
+    "这个方程{eq}`eq:reduced` 被称为 **简化形式** ——内生变量被表示为参数和外生变量的显函数。\n",
     "特别地，\n",
     "\n",
     "$$\n",
     "q_{i}=\\left(\\alpha_{d}+e_{di}-\\alpha_{s}-e_{si}\\right)/\\left(\\beta_{s}+\\beta_{d}\\right)\n",
     "$$\n",
     "\n",
-    "因此对数价格与 $e_{si}$ 和 $e_{di}$ 都相关。由于在计量经济学意义上， $q_{i}$ 在\n",
-    "{eq}`eq:demand`或{eq}`eq:supply`中是内生的，因此需求弹性和供给弹性都不能与\n",
-    "$\\left(p_{i},q_{i}\\right)$ 相同。确实，由于在{eq}`eq:reduced`中，\n",
+    "因此对数价格与 $e_{si}$ 和 $e_{di}$ 都相关。由于在计量经济学中， $q_{i}$ 在\n",
+    "{eq}`eq:demand`或{eq}`eq:supply`中是内生的，因此需求弹性和供给弹性都不能用 $\\left(p_{i},q_{i}\\right)$ \n",
+    "识别。在{eq}`eq:reduced`中，\n",
     "\n",
     "$$\n",
     "p_{i}=\\left(\\beta_{s}\\alpha_{d}+\\beta_{d}\\alpha_{s}+\\beta_{s}e_{di}+\\beta_{d}e_{si}\\right)/\\left(\\beta_{s}+\\beta_{d}\\right)\n",
@@ -417,12 +408,12 @@
     "$$\n",
     "\n",
     "其中 $\\sigma_{d}^{2}=\\mathrm{var}\\left[e_{di}\\right]$,\n",
-    "$\\sigma_{s}^{2}=\\mathrm{var}\\left[e_{si}\\right]$ and\n",
+    "$\\sigma_{s}^{2}=\\mathrm{var}\\left[e_{si}\\right]$ 且\n",
     "$\\sigma_{sd}=\\mathrm{cov}\\left[e_{di},e_{si}\\right]$。\n",
     "\n",
-    "这是供需系统的经典例子。结构参数无法被直接识别，因为观察到的\n",
-    "$\\left(p_{i},q_{i}\\right)$ 是均衡的结果——需求曲线和供给曲线的交叉点。\n",
-    "为了识别需求曲线，我们需要一个仅移动供给曲线的工具；反之亦然。\n",
+    "这是供需模型的经典例子。结构参数无法被直接识别，因为观察到的\n",
+    "$\\left(p_{i},q_{i}\\right)$ 是均衡(equilibrium)——需求曲线和供给曲线的交点的结果。\n",
+    "为了识别需求曲线，我们需要一个仅移动供给曲线的工具变量；反之亦然。\n",
     "\n",
     "```"
    ]
@@ -432,22 +423,22 @@
    "metadata": {},
    "source": [
     "```{prf:example} 凯恩斯型方程\n",
-    "这是借用 Hayashi (2000, p.193) 的模型，但其源自{cite}`haavelmo1943statistical`。\n",
-    "一位计量经济学家想求出 $\\beta_{2}$， 也就是凯恩斯型方程中的 **边际消费倾向** :\n",
+    "这里借用了 Hayashi (2000, p.193) 的模型，但其最早可以追溯到{cite}`haavelmo1943statistical`。\n",
+    "计量经济学家想求出凯恩斯型方程中的 $\\beta_{2}$，即**边际消费倾向**(marginal propensity of consumption)：\n",
     "\n",
     "$$\n",
     "C_{i}=\\beta_{1}+\\beta_{2}Y_{i}+u_{i}\n",
     "$$(eq:keynes)\n",
     "\n",
-    "其中 $C_{i}$ 是家庭消费，$Y_{i}$ 是 GNP，而 $u_{i}$ 是不可观察的误差。\n",
-    "但是，$Y_{i}$ 和 $C_{i}$ 通过一个会计等式连接（没有误差）\n",
+    "其中 $C_{i}$ 是家庭消费，$Y_{i}$ 是GNP，而 $u_{i}$ 是不可观察的误差。\n",
+    "但是，$Y_{i}$ 和 $C_{i}$ 可以通过一个没有误差的会计等式联系起来\n",
     "\n",
     "$$\n",
     "Y_{i}=C_{i}+I_{i}\n",
     "$$\n",
     "\n",
     "其中 $I_{i}$ 是投资。\n",
-    "我们假设 $\\mathbb{E}\\left[u_{i}|I_{i}\\right]=0$，因为投资是预先确定的。\n",
+    "因为投资是预先确定的，我们可以假设 $\\mathbb{E}\\left[u_{i}|I_{i}\\right]=0$。\n",
     "在这个例子中，$\\left(Y_{i}C_{i}\\right)$ 是内生的，而$\\left(I_{i},u_{i}\\right)$\n",
     "是外生的。将两个方程以结构形式放在一起：\n",
     "\n",
@@ -488,7 +479,7 @@
     "\\end{pmatrix}.\\end{aligned}\n",
     "$$\n",
     "\n",
-    "OLS{eq}`eq:keynes`将不一致，因为在简化形式中，\n",
+    "OLS估计{eq}`eq:keynes`将不相合，因为在简化形式中，\n",
     "$Y_{i}=\\frac{1}{1-\\beta_{2}}\\left(\\beta_{1}+u_{i}+I_{i}\\right)$ 意味着\n",
     "$\\mathbb{E}\\left[Y_{i}u_{i}\\right]=\\mathbb{E}\\left[u_{i}^{2}\\right]/\\left(1-\\beta_{2}\\right)\\neq0$。\n",
     "```\n",
@@ -496,17 +487,19 @@
     "## 总结\n",
     "\n",
     "\n",
-    "尽管我们经常处理具有潜在内生变量的单方程模型，但基础的结构系统可能涉及多个方程。\n",
-    "联立方程模型是一种经典的计量经济学建模方法，它在结构经济研究中仍然得到积极应用。\n",
-    "当我们的经济模型是“结构性”时，我们需要牢记一个因果机制。在这里我们不会像在第2章中\n",
-    "那样通过对照组和治疗组来确定因果关系，而将会从经济结构的角度来看待因果关系。\n",
+    "尽管我们经常要处理的是有潜在内生变量的单方程模型，但背后的结构模型可能涉及多个方程。\n",
+    "联立方程模型是一种经典的计量经济学建模方法，而且至今在结构经济研究中它仍然有着广泛应用。\n",
+    "当我们的经济模型是“结构性”时，我们要牢记**因果机制**。此时我们不再像在第2章\n",
+    "那样通过控制组和对照组来确定因果效应，而是从经济结构的视角来看待因果关系。\n",
     "\n",
-    "**历史注释**: 工具最初出现在{cite}`wright1928tariff`中，\n",
-    "用于识别内生变量的系数。这被认为是与Philip的儿子Sewall Wright合作产生的想法。\n",
-    "供需分析归因于{cite}`working1927statistical`，而测量误差研究来源于{cite}`fricsh1934statistical`。\n",
-    "\n",
-    "**拓展阅读**: 因果关系是计量经济学的圣杯。{cite}`pearl2018book` 是一本颇具哲理的畅销书。\n",
-    "{cite}`chen2011nonlinear` 对现代非线性测量误差模型进行了文献综述。\n"
+    "```{admonition} 历史趣闻\n",
+    "工具变量最初在{cite}`wright1928tariff`中出现，被用于识别内生变量的系数。这被认为是与Philip的儿子Sewall Wright合作产生的想法。\n",
+    "供需分析需要感谢{cite}`working1927statistical`的贡献，测量误差研究则来源于{cite}`fricsh1934statistical`。\n",
+    "```\n",
+    "```{admonition} 拓展阅读\n",
+    "因果关系是计量经济学的圣杯。{cite}`pearl2018book` 是一本颇具哲理的畅销书籍，阅读体验良好。\n",
+    "{cite}`chen2011nonlinear` 综述了现代的非线性误差测量模型。\n",
+    "```"
    ]
   }
  ],
